--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Mohamed-eg.github.io/E-commers-React",
+  "homepage": "https://Mohamed-eg.github.io/E-commers-React/",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
